<resources>
    <string name="app_name">AdapterApplication</string>
    <string name="fragment_one">Fragment one</string>
    <string name="fragment_two">Fragment dos</string>
    <string name="text_description">Descripción</string>
    <string name="text_name">Nombre</string>
    <string name="text_price">Precio</string>
    <string name="text_quantity">Cantidad</string>
    <string name="text_brand">Marca</string>
    <string name="text_button">Crear producto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_button">Crear producto</string>
    <string name="title_validate_internet">Error</string>
    <string name="message_validate_internet">Verificar conexión a internet</string>
    <string name="text_again">Intentar de nuevo</string>
    <string name="accept">Aceptar</string>
</resources>
