<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/product_etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/text_name"
        android:imeOptions="actionNext"
        android:textStyle="bold"
        android:typeface="serif" />


    <EditText
        android:id="@+id/product_etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/text_description"
        android:imeOptions="actionNext"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:typeface="serif" />


    <EditText
        android:id="@+id/product_etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/text_price"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:typeface="serif" />


    <EditText
        android:id="@+id/product_etQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/text_quantity"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:typeface="serif" />


    <EditText
        android:id="@+id/product_etBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/text_brand"
        android:imeOptions="actionNext"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:typeface="serif" />


    <Button
        android:id="@+id/product_btnCreate"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:text="@string/create_button"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:typeface="serif" />


</LinearLayout>
